--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Proxima Nova', Georgia, sans-serif;
+  font-family: 'Roboto', 'Proxima Nova', Georgia, sans-serif;
 }
